# cmake_default

./: .gitattributes  .gitignore  readme.md
part1/basic/: CMakeLists.txt
part1/basic/app/: CMakeLists.txt
part1/basic/app/src/app1/: main.cpp
part1/basic/dll1/: CMakeLists.txt
part1/basic/dll1/src/dll1/: printer.cpp  printer.h
part1/basic/dll2/: CMakeLists.txt
part1/basic/dll2/src/dll2/: calculator.cpp  calculator.h
part1/basic/lib3/: CMakeLists.txt
part1/basic/lib3/src/lib3/: logger.cpp  logger.h
part2/app/: CMakeLists.txt  run.cmake  util23.cmake
part2/app/app1/: CMakeLists.txt
part2/app/app1/src/app1/: main.cpp
part2/app/lib/: CMakeLists.txt
part2/app/lib/src/lib/: abc.cpp  abc.h
part2/dll1/: CMakeLists.txt  Config.cmake.in  build.bat  dll1_config.h.in  run.cmake
part2/dll1/printer/: CMakeLists.txt  Config.cmake.in
part2/dll1/printer/src/printer/: index.cpp  index.h  version.h
part2/dll1/util/: CMakeLists.txt  Config.cmake.in
part2/dll1/util/src/util/: index.cpp  index.h  version.h
part2/dll2/: CMakeLists.txt  run.cmake
part2/dll2/logger/: CMakeLists.txt  Config.cmake.in  helper_nouse.cmake
part2/dll2/logger/src/logger/: index.cpp  index.h  version.h
